blog/aliyun-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aliyun-svc
spec:
  type: ExternalName
  externalName: mirrors.aliyun.com
