blog/github-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-svc
spec:
  type: ExternalName
  externalName: github.com
