blog/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-shaoyou-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blog.shaoyou.store
        - api.blog.shaoyou.store
      secretName: blog-ingress-secret
  rules:
    - host: blog.shaoyou.store
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blog-web-svc
                port:
                  number: 80
    - host: api.blog.shaoyou.store
      http:
        paths:
          - pathType: Prefix
            path: "/blog"
            backend:
              service:
                name: blog-service-svc
                port:
                  number: 9090
          - pathType: Prefix
            path: "/images"
            backend:
              service:
                name: blog-service-svc
                port:
                  number: 8088
